# vigir_footstep_planning_core

vigir_adaptive_footstep_planner/: CMakeLists.txt  package.xml
vigir_adaptive_footstep_planner/launch/: adaptive_footstep_planner.launch
vigir_adaptive_footstep_planner/src/: adaptive_footstep_planner.cpp  adaptive_footstep_planner_node.cpp
vigir_feet_pose_generator/: CMakeLists.txt  package.xml
vigir_feet_pose_generator/launch/: feet_pose_generator.launch
vigir_feet_pose_generator/src/: feet_pose_generator.cpp  feet_pose_generator_node.cpp
vigir_foot_pose_transformer/: CMakeLists.txt  package.xml
vigir_foot_pose_transformer/launch/: foot_pose_transformer.launch
vigir_foot_pose_transformer/src/: foot_pose_transformer.cpp  foot_pose_transformer_node.cpp
vigir_footstep_planner/: CMakeLists.txt  basic_plugins.xml  package.xml
vigir_footstep_planner/config/: basic_plugins.yaml  default_plugin_sets.yaml  robot_params.yaml
vigir_footstep_planner/config/planner/: footstep_planner_params_default.yaml
vigir_footstep_planner/include/vigir_footstep_planner/: custom_ompl_motion_validator.h  customstatevaliditychecker.h  customvalidstatesampler.h  environment_parameters.h  footstep_planner.h  footstep_planner_environment.h  footstep_planner_node.h  heuristic.h  ompl_helper.h  post_processor.h  projection_for_space.h  robot_model.h  step_cost_estimator.h  world_model.h
vigir_footstep_planner/include/vigir_footstep_planner/heuristics/: dynamics_heuristic.h  euclidean_heuristic.h  heuristic.h  hot_map_heuristic.h  occupancy_grid_map_heuristic.h  path_cost_heuristic.h  step_cost_heuristic.h  travel_time_heuristic.h
vigir_footstep_planner/include/vigir_footstep_planner/ompl_interface/: custom_ompl_motion_validator.h  customstatevaliditychecker.h  customvalidstatesampler.h  projection_for_space.h
vigir_footstep_planner/include/vigir_footstep_planner/post_processor/: post_processor.h  step_dynamics_post_process.h
vigir_footstep_planner/include/vigir_footstep_planner/robot_model/: dynamics_reachability.h  reachability_polygon.h  robot_model.h
vigir_footstep_planner/include/vigir_footstep_planner/state_space/: footstep.h  planning_state.h  state_space.h
vigir_footstep_planner/include/vigir_footstep_planner/step_cost_estimators/: boundary_step_cost_estimator.h  const_step_cost_estimator.h  dynamics_step_cost_estimator.h  euclidean_step_cost_estimator.h  ground_contact_step_cost_estimator.h  map_step_cost_estimator.h  step_cost_estimator.h  travel_time_step_cost_estimator.h
vigir_footstep_planner/include/vigir_footstep_planner/threading/: expand_state_job.h
vigir_footstep_planner/include/vigir_footstep_planner/world_model/: foot_grid_map_model.h  grid_map_2d.h  grid_map_model.h  terrain_model.h  upper_body_grid_map_model.h  world_model.h
vigir_footstep_planner/launch/: footstep_planner_test.launch
vigir_footstep_planner/maps/: RCGO2011_Hector_Mission4_2.pgm  RCGO2011_Hector_Mission4_2.yaml
vigir_footstep_planner/scripts/: plan_footsteps.py
vigir_footstep_planner/src/: custom_ompl_motion_validator.cpp  customstatevaliditychecker.cpp  customvalidstatesampler.cpp  environment_parameters.cpp  footstep_planner.cpp  footstep_planner_environment.cpp  footstep_planner_node.cpp  heuristic.cpp  ompl_helper.cpp  post_processor.cpp  robot_model.cpp  step_cost_estimator.cpp  world_model.cpp
vigir_footstep_planner/src/heuristics/: dynamics_heuristic.cpp  euclidean_heuristic.cpp  heuristic.cpp  hot_map_heuristic.cpp  occupancy_grid_map_heuristic.cpp  path_cost_heuristic.cpp  step_cost_heuristic.cpp  travel_time_heuristic.cpp
vigir_footstep_planner/src/ompl_interface/: custom_ompl_motion_validator.cpp  customstatevaliditychecker.cpp  customvalidstatesampler.cpp  ompl_helper.cpp
vigir_footstep_planner/src/post_processor/: post_processor.cpp  step_dynamics_post_process.cpp
vigir_footstep_planner/src/robot_model/: dynamics_reachability.cpp  reachability_polygon.cpp  robot_model.cpp
vigir_footstep_planner/src/state_space/: footstep.cpp  planning_state.cpp  state_space.cpp
vigir_footstep_planner/src/step_cost_estimators/: boundary_step_cost_estimator.cpp  const_step_cost_estimator.cpp  dynamics_step_cost_estimator.cpp  euclidean_step_cost_estimator.cpp  ground_contact_step_cost_estimator.cpp  map_step_cost_estimator.cpp  step_cost_estimator.cpp  step_cost_key.cpp  travel_time_step_cost_estimator.cpp
vigir_footstep_planner/src/threading/: expand_state_job.cpp
vigir_footstep_planner/src/world_model/: foot_grid_map_model.cpp  grid_map_2d.cpp  grid_map_model.cpp  terrain_model.cpp  upper_body_grid_map_model.cpp  world_model.cpp
vigir_footstep_planning/: CMakeLists.txt  package.xml
vigir_footstep_planning/config/: default_plugin_set.yaml  pattern_generator_config.yaml  planner  robot_params.yaml  rviz_footstep_planning.rviz
vigir_footstep_planning/launch/: execute_step_plan_rqt.launch  fake_environment.launch  footstep_planner_test.launch  footstep_planning_basics.launch  global_footstep_planner_test.launch  minimal_ocs.launch  parameter_editor_rqt.launch  pattern_generator_test.launch  rviz_footstep_planning.launch  step_interface_rqt.launch
vigir_footstep_planning/scripts/: execute_step_plan_rqt  parameter_editor_qt  parameter_editor_rqt  pattern_generator_rqt  step_interface_qt  step_interface_rqt
vigir_footstep_planning_default_plugins/: CMakeLists.txt  default_plugins.xml  package.xml
vigir_footstep_planning_default_plugins/config/: default_plugin_descriptions.yaml  default_plugins.yaml  plugin_descriptions.yaml
vigir_global_footstep_planner/: CMakeLists.txt  package.xml
vigir_global_footstep_planner/launch/: global_footstep_planner_test.launch
vigir_global_footstep_planner/src/: global_footstep_planner.cpp  global_footstep_planner_node.cpp
vigir_pattern_generator/: .gitignore  CMakeLists.txt  package.xml
vigir_pattern_generator/config/: pattern_generator_config.yaml
vigir_pattern_generator/launch/: joystick.launch  pattern_generator.launch  pattern_generator_test.launch  (+1 more)
vigir_walk_monitor/: .gitignore  CMakeLists.txt  package.xml
(+75 files in other folders)
