<?xml version="1.0"?>
<package>
  <name>vigir_footstep_planning</name>
  <version>0.0.0</version>
  <description>The vigir_footstep_planning package is a stack for the whole footstep planning system. It contains the top-level launch files and may be used to include all dependencies.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="stumpf@sim.tu-darmstadt.de">Alexander Stumpf</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/vigir_footstep_planning</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author email="stumpf@sim.tu-darmstadt.de">Alexander Stumpf</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>vigir_footstep_planning_msgs</build_depend>
  <build_depend>vigir_footstep_planning_lib</build_depend>
  <build_depend>vigir_footstep_planning_plugins</build_depend>
  <build_depend>vigir_footstep_planning_default_plugins</build_depend>
  <build_depend>vigir_foot_pose_transformer</build_depend>
  <build_depend>vigir_feet_pose_generator</build_depend>
  <build_depend>vigir_footstep_planner</build_depend>
  <build_depend>vigir_global_footstep_planner</build_depend>
  <build_depend>vigir_pattern_generator</build_depend>

  <run_depend>vigir_footstep_planning_msgs</run_depend>
  <run_depend>vigir_footstep_planning_lib</run_depend>
  <run_depend>vigir_footstep_planning_plugins</run_depend>
  <run_depend>vigir_footstep_planning_default_plugins</run_depend>
  <run_depend>vigir_foot_pose_transformer</run_depend>
  <run_depend>vigir_feet_pose_generator</run_depend>
  <run_depend>vigir_footstep_planner</run_depend>
  <run_depend>vigir_global_footstep_planner</run_depend>
  <run_depend>vigir_pattern_generator</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
